changes after review

--- a/typescript/index.html
+++ b/typescript/index.html
@@ -6,11 +6,11 @@
     <link rel=stylesheet href="style.css" >
 </head>
 <body>
-<h1>Random Animal Gallery</h1>
-<button id="showDogBtn" class="button_show_dog">Show me a dog!</button>
-<button id="showCatBtn" class="button_show_cat">Show me a cat!</button>
-<p id="statusMessage"></p>
-<img id="animalImage" class="center" src="" alt="A cute animal will appear here!" style="display:none;" />
-<script src="main.js"></script>
+    <h1>Random Animal Gallery</h1>
+    <button id="showDogBtn" class="button_show_animal button_show_dog">Show me a dog!</button>
+    <button id="showCatBtn" class="button_show_animal button_show_cat">Show me a cat!</button>
+    <p id="statusMessage"></p>
+    <img id="animalImage" class="center not_displayed" src="" alt="A cute animal will appear here!"/>
+    <script src="main.js"></script>
 </body>
 </html>
